src/test/ui/object-safety/object-safety-phantom-fn.stderr
error: compilation successful
  --> $DIR/object-safety-phantom-fn.rs:31:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | | }
   | |_^

error: aborting due to previous error

